# shroud-speak

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  Cargo.toml  PROTOCOL.md  README.md  REVIEW.md  ROADMAP.md  THREAT_MODEL.md
crates/shroud-core/: Cargo.toml
crates/shroud-core/examples/: m0_spike.rs
crates/shroud-core/src/: lib.rs  transport.rs
crates/shroud-proto/: Cargo.toml
crates/shroud-proto/src/: lib.rs
