[package]
name = "shroud-core"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
shroud-proto = { path = "../shroud-proto" }
# arti transitively pulls in rusqlite for its key/state store. Force the bundled SQLite
# so it compiles from source (via the C toolchain) instead of linking a system
# `sqlite3.lib` — required on Windows, and the right call for the self-contained
# static-binary goal (ROADMAP M5). Cargo feature unification applies this to the
# transitive use; the version must match what arti resolves (libsqlite3-sys 0.30.x).
libsqlite3-sys = { version = "0.30", features = ["bundled"] }
arti-client.workspace = true
tor-rtcompat.workspace = true
tor-hsservice.workspace = true
tor-cell.workspace = true
tor-proto.workspace = true
tokio.workspace = true
futures.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
