[package]
name = "shroud-proto"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
license.workspace = true

# Intentionally dependency-free: this is the foundational, no-I/O envelope crate.
# It exposes a typed `FrameError` rather than pulling in an application error type.
[dependencies]
